; Copyright © 2022-2024 BlueRock Security, Inc.
;
; This file is CONFIDENTIAL AND PROPRIETARY to BlueRock. All rights reserved.
;
; Use of this file is only permitted subject to a separate written license agreement with BlueRock.

(env
 (_
  (flags :standard %{read-lines:flags/ocamlc})
  (ocamlopt_flags :standard -O3 -unbox-closures)
  (coq
   (flags
    (:standard
      %{read-lines:flags/coqc}
)))))
